--- a/Task/requirements.txt
+++ b/Task/requirements.txt
@@ -1,24 +1,13 @@
-# Frontend - Streamlit
 streamlit==1.24.0
-
-# Backend - FastAPI
-fastapi
-uvicorn[standard]
-
-# Generative AI - Hugging Face Transformers
-transformers
-torch  # PyTorch backend for Hugging Face models
-sentencepiece  # Required for some tokenizers
-
-# Word Cloud visualization
+fastapi==0.95.1
+uvicorn[standard]==0.22.0
+transformers==4.28.1
+torch==2.1.0
+sentencepiece==0.1.97
 wordcloud==1.9.2
-matplotlib==3.7.3  # For additional visualization support if needed
-
-# Common utilities
-pydantic  # Used by FastAPI for data validation
-requests  # For making HTTP requests
-numpy==1.24.3  # For numerical computations
-pandas==2.2.3  # For data handling
-
-# Optional but useful
-python-multipart  # For handling file uploads in FastAPI
+matplotlib==3.7.3
+pydantic==1.10.7
+requests==2.28.2
+numpy==1.24.3
+pandas==2.2.3
+python-multipart==0.0.6
