--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,5 @@
 {
   "name": "Python 3",
-  // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
   "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
   "customizations": {
     "codespaces": {
@@ -17,10 +16,14 @@
       ]
     }
   },
-  "updateContentCommand": "[ -f packages.txt ] && sudo apt update && sudo apt upgrade -y && sudo xargs apt install -y <packages.txt; [ -f requirements.txt ] && pip3 install --user -r requirements.txt; pip3 install --user streamlit; echo '✅ Packages installed and Requirements met'",
-  "postAttachCommand": {
-    "server": "streamlit run Task/FE/app.py --server.enableCORS false --server.enableXsrfProtection false"
-  },
+  "postCreateCommand": [
+    "echo 'Installing Python dependencies...'",
+    "pip install --upgrade pip",  // Upgrade pip to avoid potential issues
+    "if [ -f requirements.txt ]; then pip install -r requirements.txt; else echo 'requirements.txt not found'; fi",  // Install dependencies from requirements.txt if present
+    "pip install --user streamlit",  // Install Streamlit explicitly if needed
+    "echo '✅ Packages installed and Requirements met'"
+  ],
+  "postAttachCommand": "streamlit run Task/FE/app.py --server.enableCORS false --server.enableXsrfProtection false",
   "portsAttributes": {
     "8501": {
       "label": "Application",
