--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,12 @@
 {
   "name": "Python 3",
+  // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
   "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
   "customizations": {
     "codespaces": {
       "openFiles": [
         "README.md",
-        "Task/FE/app.py"
+        "Task/FE/app/py"
       ]
     },
     "vscode": {
@@ -16,15 +17,10 @@
       ]
     }
   },
-   "postCreateCommand": [
-  "echo 'Installing Python dependencies...'",
-  "pip install --upgrade pip",  // Ensure pip is the latest version
-  "if [ -f Task/requirements.txt ]; then pip install -r Task/requirements.txt; else echo 'requirements.txt not found'; fi",  // Adjusted path
-  "pip install --user streamlit",  // Install Streamlit explicitly
-  "echo '✅ Packages installed and Requirements met'"
-
-  ],
-  "postAttachCommand": "streamlit run Task/FE/app.py --server.enableCORS false --server.enableXsrfProtection false",
+  "updateContentCommand": "[ -f packages.txt ] && sudo apt update && sudo apt upgrade -y && sudo xargs apt install -y <packages.txt; [ -f requirements.txt ] && pip3 install --user -r requirements.txt; pip3 install --user streamlit; echo '✅ Packages installed and Requirements met'",
+  "postAttachCommand": {
+    "server": "streamlit run 'Task/FE/app.py' --server.enableCORS false --server.enableXsrfProtection false"
+  },
   "portsAttributes": {
     "8501": {
       "label": "Application",
