--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
     "codespaces": {
       "openFiles": [
         "README.md",
-        "Task/FE/app/py"
+        "Task/FE/app.py"
       ]
     },
     "vscode": {
