--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,33 +1,28 @@
 {
-  "name": "Python 3",
-  // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-  "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
+  "name": "Streamlit & FastAPI Devcontainer",
+  "image": "mcr.microsoft.com/devcontainers/python:3.11-bullseye",
   "customizations": {
-    "codespaces": {
-      "openFiles": [
-        "README.md",
-        "Task/FE/app.py"
-      ]
-    },
     "vscode": {
-      "settings": {},
+      "settings": {
+        "python.pythonPath": "/usr/local/bin/python"
+      },
       "extensions": [
         "ms-python.python",
         "ms-python.vscode-pylance"
       ]
     }
   },
-  "updateContentCommand": "[ -f packages.txt ] && sudo apt update && sudo apt upgrade -y && sudo xargs apt install -y <packages.txt; [ -f requirements.txt ] && pip3 install --user -r requirements.txt; pip3 install --user streamlit; echo '✅ Packages installed and Requirements met'",
-  "postAttachCommand": {
-    "server": "streamlit run 'Task/FE/app.py' --server.enableCORS false --server.enableXsrfProtection false"
-  },
-  "portsAttributes": {
-    "8501": {
-      "label": "Application",
-      "onAutoForward": "openPreview"
-    }
-  },
+  "postCreateCommand": [
+    "echo 'Installing backend dependencies...'",
+    "pip install --upgrade pip",
+    "pip install -r backend/requirements.txt",
+    "pip install -r frontend/requirements.txt",
+    "echo '✅ Dependencies installed'"
+  ],
+  "postAttachCommand": "uvicorn backend.main:app --host 0.0.0.0 --port 8000 & streamlit run frontend/app.py --server.enableCORS false --server.enableXsrfProtection false",
   "forwardPorts": [
+    8000,
     8501
-  ]
+  ],
+  "remoteUser": "vscode"
 }
